# readwise-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: run-static-check-readwise-mcp.yml
src/: __init__.py  config.py  mcp_instance.py  server.py
src/clients/: readwise.py
src/errors/: __init__.py  api_error.py
src/models/: __init__.py  _common.py  highlight.py  tag.py
src/services/: highlight.py
src/tools/: __init__.py  highlight.py
src/utils/: http.py
tests/services/: test_highlight.py
