[project]
name = "readwise-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[tool.pyrefly]
project_includes = [
    "src/**/*.py",
]

[dependency-groups]
dev = [
    "pyrefly>=0.46.3",
    "ruff>=0.14.10",
]
