[project]
name = "readwise-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.pyrefly]
search_paths = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.46.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
